# Canny-GPU-CUDA-implementation

./: CMakeLists.txt  CannyGPU.cu  CannyGPU.cuh  CudaTimer.cu  CudaTimer.cuh  GaussianFilter.cu  GaussianFilter.cuh  README.md  SM_Loader.cu  SM_Loader.cuh  main.cpp  utility.cpp  utility.hpp
